# afterlife

./: .eslintrc.cjs  .gitignore  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.cjs  tailwind.config.js  tsconfig.json  webpack.config.js
src/blog/: settings.py  urls.py
src/components/: Header.astro  HeaderLink.astro
src/posts/: admin.py  models.py  urls.py  views.py
src/posts/migrations/: 0001_initial.py
src/posts/templatetags/: markdown.py
src/styles/: global.css
src/templates/: base.html
src/templates/posts/: blogpost_confirm_delete.html  blogpost_create.html  blogpost_detail.html  blogpost_edit.html  blogpost_list.html
