[tool.poetry]
name = "afterlife"
version = "0.1.0"
description = ""
authors = ["john-mirage <28307090+john-mirage@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
psycopg = {extras = ["binary"], version = "^3.1.9"}
python-dotenv = "^1.0.0"
markdown = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
